--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,50 +1,36 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container-fluid">
-    <%= link_to "My App", root_path, class: "navbar-brand" %>
-    
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <%= link_to "Calendar", root_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Courses", preferred_emails_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Assignments", root_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Tests", root_path, class: "nav-link" %>
-        </li>
+<nav class="navbar">
+  <div class="navbar-container">
+    <%= link_to "Clask", root_path, class: "navbar-brand" %>
+
+    <div class="navbar-links">
+      <ul class="nav-menu">
+        <li><%= link_to "Calendar", root_path, class: "nav-link" %></li>
+        <li><%= link_to "Courses", preferred_emails_path, class: "nav-link" %></li>
+        <li><%= link_to "Assignments", root_path, class: "nav-link" %></li>
+        <li><%= link_to "Tests", root_path, class: "nav-link" %></li>
       </ul>
-      
-     <ul class="navbar-nav">
-  <li class="nav-item dropdown">
-    <% if user_signed_in? %>
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-        <%= current_user.email %>
-      </a>
-      <div class="dropdown-menu dropdown-menu-end">
-        <%= link_to "Profile", root_path, class: "dropdown-item" %>
-        <%= link_to "Settings", root_path, class: "dropdown-item" %>
-        <div class="dropdown-divider"></div>
-        <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item border-0 bg-transparent w-100 text-start" %>
+
+      <div class="nav-user-dropdown">
+        <% if user_signed_in? %>
+          <div class="dropdown">
+            <button class="dropdown-toggle"><%= current_user.email %></button>
+            <div class="dropdown-menu">
+              <%= link_to "Profile", root_path, class: "dropdown-item" %>
+              <%= link_to "Settings", root_path, class: "dropdown-item" %>
+              <div class="dropdown-divider"></div>
+              <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            </div>
+          </div>
+        <% else %>
+          <div class="dropdown">
+            <button class="dropdown-toggle">Account</button>
+            <div class="dropdown-menu">
+              <%= link_to "Sign In", new_user_session_path, class: "dropdown-item" %>
+              <%= link_to "Sign Up", new_user_registration_path, class: "dropdown-item" %>
+            </div>
+          </div>
+        <% end %>
       </div>
-    <% else %>
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-        Account
-      </a>
-      <div class="dropdown-menu dropdown-menu-end">
-        <%= link_to "Sign In", new_user_session_path, class: "dropdown-item" %>
-        <%= link_to "Sign Up", new_user_registration_path, class: "dropdown-item" %>
-      </div>
-    <% end %>
-  </li>
-</ul>
     </div>
   </div>
 </nav>
