--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,4 +1,39 @@
-@import 'bootstrap/scss/bootstrap';
-@import 'bootstrap-icons/font/bootstrap-icons';
+@use "bootstrap/scss/bootstrap" as *;
+@use "simple_calendar" as *;
 
-@import "custom.css";
+@font-face {
+  font-family: "bootstrap-icons";
+  src: url("bootstrap-icons/font/fonts/bootstrap-icons.woff2") format("woff2"),
+       url("bootstrap-icons/font/fonts/bootstrap-icons.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+
+.btn-oauth {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  font-weight: 500;
+  transition: all 0.2s ease;
+}
+
+.btn-google {
+  background: white;
+  color: #5f6368;
+  border: 1px solid #dadce0;
+  
+  &:hover {
+    background: #f8f9fa;
+    border-color: #d2e3fc;
+    color: #202124;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+  }
+  
+  &:active {
+    background: #f1f3f4;
+  }
+}
