--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,37 +1,29 @@
-<%= form_with(model: event) do |form| %>
-  <% if event.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
-
-      <ul>
-        <% event.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+<%= turbo_frame_tag "event_form" do %>
+  <%= form_with model: event, data: { turbo_frame: "event_form" } do |f| %>
+    <!-- title -->
+    <div class="mb-3">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: "form-control" %>
     </div>
+
+    <!-- description -->
+    <div class="mb-3">
+      <%= f.label :description %>
+      <%= f.text_area :description, class: "form-control" %>
+    </div>
+
+    <!-- start_time -->
+    <div class="mb-3">
+      <%= f.label :start_time %>
+      <%= f.datetime_select :start_time, class: "form-control" %>
+    </div>
+
+    <!-- end_time -->
+    <div class="mb-3">
+      <%= f.label :end_time %>
+      <%= f.datetime_select :end_time, class: "form-control" %>
+    </div>
+
+    <%= f.submit (event.persisted? ? "Update" : "Create"), class: "btn btn-success" %>
   <% end %>
-
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.textarea :description %>
-  </div>
-
-  <div>
-    <%= form.label :start_time, style: "display: block" %>
-    <%= form.datetime_field :start_time %>
-  </div>
-
-  <div>
-    <%= form.label :end_time, style: "display: block" %>
-    <%= form.datetime_field :end_time %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
 <% end %>
