--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,42 +1,17 @@
-<div class="container py-5">
+<div class="container mt-5">
   <div class="row justify-content-center">
-    <div class="col-md-6 col-lg-5">
+    <div class="col-md-6">
       <div class="card shadow">
-        <div class="card-header bg-white py-3">
-          <h2 class="h4 mb-0 text-center">Sign up</h2>
-        </div>
-        
-        <div class="card-body p-4">
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "needs-validation", novalidate: true }) do |f| %>
-            <%= render "devise/shared/error_messages", resource: resource %>
-
-            <div class="mb-3">
-              <%= f.label :email, class: "form-label" %>
-              <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", required: true %>
-            </div>
-
-            <div class="mb-3">
-              <%= f.label :password, class: "form-label" %>
-              <% if @minimum_password_length %>
-                <small class="text-muted">(<%= @minimum_password_length %> characters minimum)</small>
-              <% end %>
-              <%= f.password_field :password, autocomplete: "new-password", class: "form-control", required: true %>
-            </div>
-
-            <div class="mb-4">
-              <%= f.label :password_confirmation, class: "form-label" %>
-              <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", required: true %>
-            </div>
-
-            <div class="d-grid mb-3">
-              <%= f.submit "Sign up", class: "btn btn-primary btn-lg" %>
-            </div>
+        <div class="card-body text-center p-5">
+          <h1 class="mb-4">Join Clask</h1>
+          <p class="lead mb-4">We only use Google for authentication</p>
+          
+          <%= button_to user_google_oauth2_omniauth_authorize_path, class: "btn btn-primary btn-lg", data: { turbo: false } do %>
+            <i class="bi bi-google me-2"></i> Sign up with Google
           <% end %>
-
-          <hr class="my-4">
-
-          <div class="text-center">
-            <%= render "devise/shared/links" %>
+          
+          <div class="mt-4">
+            <p>Already have an account? <%= link_to "Sign in", new_session_path(resource_name) %></p>
           </div>
         </div>
       </div>
