--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,8 +13,15 @@
           <div class="mt-4">
             <p>Already have an account? <%= link_to "Sign in", new_session_path(resource_name) %></p>
           </div>
+          <div class="mt-3">
+  <small>
+    <%= link_to 'Privacy Policy', privacy_path, target: '_blank', rel: 'noopener noreferrer', class: 'text-decoration-none' %>
+  </small>
+</div>
+
         </div>
       </div>
     </div>
   </div>
 </div>
+
