--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,11 +9,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to "Calendar", root_path, class: "nav-link" %>
+          <%= link_to "Home", homepage_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
-          <%= link_to "Courses", preferred_emails_path, class: "nav-link" %>
-        </li>
+
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "Calendar", root_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Courses", preferred_emails_path, class: "nav-link" %>
+          </li>
+        <% end %>
       </ul>
 
       <div class="d-flex">
@@ -24,7 +30,9 @@
             </button>
             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" aria-labelledby="dropdownMenuButton1">
               <li><hr class="dropdown-divider"></li>
-              <li><%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
+              <li>
+                <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+              </li>
             </ul>
           </div>
         <% else %>
